# GPTQ-for-LLaMa

./: .gitignore  pyproject.toml
